2005-12-23  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* kaffe/kaffevm/access.c
	(recursive_instanceof): Removed,

2005-12-23  Dalibor Topic  <robilad@kaffe.org>

	* include/Makefile.am: Do not generate unused header 
	java_io_FileInputStream.h.

2005-12-23  Dalibor Topic  <robilad@kaffe.org>

	* include/Makefile.am: Do not generate unused header 
	java_io_FileOutputStream.h.

2005-12-23  Dalibor Topic  <robilad@kaffe.org>

	* include/Makefile.am: Do not generate unused header 
	java_io_InputStream.h.

2005-12-23  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/native/Class.c,
	libraries/clib/native/Field.c,
	libraries/clib/native/System.c:
	Do not include unnecessary java_io_InputStream header.

2005-12-23  Dalibor Topic  <robilad@kaffe.org>

	* include/Makefile.am: Do not generate unused header 
	java_io_PrintStream.h.

2005-12-23  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/native/Class.c,
	libraries/clib/native/Field.c,
	libraries/clib/native/System.c:
	Do not include unnecessary java_io_PrintStream header.

2005-12-23  Dalibor Topic  <robilad@kaffe.org>

	* include/Makefile.am: Do not generate unused header 
	java_io_RandomAccessFile.h.

2005-12-23  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am: (SUBDIRS) Build GNU Classpath
	first, before running the build of the javalib directory. That
	ensures that glibj.zip exists and we can link rt.jar to it.

	Reported by:  Alejandro Mery  <amery@geeks.cl>

2005-12-23  Dalibor Topic  <robilad@kaffe.org>

        * libraries/javalib/external/classpath: Resynched GNU Classpath.

2005-12-23  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/boehm-gc/boehm: Upgraded to Boehm-GC 6.6

	* kaffe/kaffevm/gc2.c: Added JVMPI event emission.
	
2005-12-22  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/access.c
	(checkAccess): Simplified to the maximum according to Sun's VM
	spec we must not check for specific inner classes flags.

	* kaffe/kaffevm/classMethod.c